# xueqiu

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: deploy.ps1  deploy.sh  manage.ps1  manage.sh
src/: cli.py  config.py  models.py  scripts.md  timezone_utils.py  web.py
src/auth/: export_cookies.py  session.py
src/fetch/: client.py  follow_feed.py
src/parser/: normalize.py
src/service/: backup_worker.py  reconcile_worker.py
src/store/: repo.py  schema.sql
tests/: test_normalize.py  test_reconcile_worker.py  test_repo.py
